<resources>
    <string name="app_name" translatable="false">App Locker</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="general_header">General</string>
    <string name="password_title">Set new password</string>
    <string name="set_new_password">Set new password</string>
    <string name="new_password">New password</string>
    <string name="re_new_password">Re-enter new password</string>
    <string name="old_password">Old password</string>
    <string name="confirm">Confirm</string>
    <string name="language_title">Language</string>
    <string name="requireAfterClose">Lock again after screen off/app close</string>
    <string name="passwordProtect">Protect with password</string>
    <string name="enterPassword">Enter password</string>
    <string name="settings">Settings</string>
    <string name="lockedApps">Protect apps</string>
    <string name="reset">Reset</string>
    <string name="other">Other</string>
    <string name="reseted">Protected apps settings reseted</string>
    <string name="confirmReset">Are you sure you want to reset protected apps settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
